@@ -3,6 +3,7 @@ Changes in 22.18
 	* Added AC_CANONICAL_TARGET for target_os Debian #673485
 	* sed doesn't have [0-9]+ replace with [0-9][0-9]*
 	* assert in killall triggered for small lifetimes Debian #628617
+	* killall MAX_NAMES off by one Debian #677428
 
 
 Changes in 22.17
